--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -4,11 +4,18 @@
 @import "less_parts/variables.less";
 @import "less_parts/mixin.less";
 /*====================================================
+	fonts
+====================================================*/
+@font-face {
+	font-family: 'akzidenz';
+	src: url("https://storage.cloud.google.com/hackersandslackersassets/AkzidenzGrotesk-BQ-Light-Regular.otf") format("opentype");
+}
+/*====================================================
 	common styles
 ====================================================*/
 body,
 html {
-	font-family: 'proxima-nova',sans-serif;
+	font-family: 'akzidenz', 'proxima-nova',sans-serif;
 	font-size: 14px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -24,7 +31,10 @@ body {
 
 article {
 	font-size: 16px;
-	line-height: 1.6em;
+
+	p {
+		line-height: 2em;
+	}
 }
 
 .h1,
@@ -248,6 +258,15 @@ pre {
 		margin: auto;
 	}
 
+	.post-head {
+		margin: 10px 10px 20px;
+	}
+
+	i {
+		margin-right: 5px;
+		font-size: 12px;
+	}
+
 	.meta {
 		display: flex;
 		width: 55%;
@@ -260,10 +279,6 @@ pre {
 
 			* {
 				color: #8095A1;
-			}
-
-			i {
-				margin-right: 5px;
 			}
 
 			a {
@@ -295,7 +310,7 @@ pre {
 	}
 
 	.content {
-		padding: 10px;
+		padding: 20px;
 	}
 
 	.post-permalink {
@@ -310,9 +325,9 @@ pre {
 			text-transform: uppercase;
 			padding: 10px 20px;
 			@media(max-width: 600px) {
-				font-size: 14px;
+				font-size: 16px;
 				font-weight: 100;
-				padding: 8px 20px;
+				padding: 10PX 20px;
 			}
 		}
 	}
@@ -342,10 +357,6 @@ pre {
 			display: none;
 		}
 
-		.post-head {
-			padding: 20px;
-		}
-
 		.post-content {
 			display: none;
 		}
@@ -354,10 +365,6 @@ pre {
 	&.tag-hash-image {
 		.featured-media {
 			display: block !important;
-		}
-
-		.post-head {
-			padding: 20px 10px !important;
 		}
 	}
 }
@@ -491,7 +498,7 @@ pre {
 
 	.menu {
 		padding: 0;
-		margin: 40px 40px 0 auto;
+		margin: 30px 40px 0 auto;
 		display: flex;
 		justify-content: space-between;
 		max-width: 309px;
@@ -594,7 +601,7 @@ pre {
 }
 
 .post {
-	padding: 15px;
+	padding: 0;
 	background: @white;
 	margin-bottom: 20px;
 	position: relative;
@@ -607,7 +614,7 @@ pre {
 
 	&.page {
 		.page-head {
-			padding: 0 10px;
+			padding: 0 30px;
 			@media(max-width: 800px) {
 				margin: 0;
 
@@ -658,7 +665,6 @@ pre {
 	}
 
 	.post-head {
-		padding: 20px 10px;
 		line-height: 1;
 		text-align: left;
 
@@ -752,7 +758,7 @@ pre {
 }
 
 .post-content {
-	margin: 0 10px;
+	margin: 0 30px;
 	overflow-x: hidden;
 	clear: both;
 
@@ -760,6 +766,10 @@ pre {
 		margin-left: 15px;
 		padding-left: 15px;
 		margin-bottom: 20px;
+	}
+
+	li {
+		margin: 10px;
 	}
 
 	.fluid-width-video-wrapper {
@@ -832,10 +842,12 @@ pre {
 .post-page {
 	.post-head {
 		border-bottom: 1px solid #eaeaea;
+		margin: 0 30px;
+		padding: 30px 0;
 	}
 
 	.post-content {
-		margin: 20px 10px;
+		margin: 20px 30px;
 	}
 	@media(max-width: 800px) {
 		.featured-media {
@@ -1053,7 +1065,7 @@ pre {
 	.post-title {
 		a {
 			color: #627e90;
-			font-family: 'proxima-nova', serif;
+			font-family: 'akzidenz', 'proxima-nova', serif;
 			transition: all 0.2s ease;
 			font-size: 15px !important;
 			font-weight: 500 !important;
@@ -1188,7 +1200,7 @@ pre {
 
 			.post-title,
 			.single-author-name {
-				font-family: 'proxima-nova', serif;
+				font-family: 'akzidenz', 'proxima-nova', serif;
 				.transition(all 0.2s ease);
 				font-weight: 100;
 
@@ -1374,7 +1386,7 @@ pre {
 }
 
 p {
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 }
 
 #back-to-top {
@@ -1438,6 +1450,7 @@ p {
 	flex-wrap: wrap;
 	align-content: flex-start;
 	flex-flow: row wrap;
+	margin: 30px;
 
 	.tag-wrapper {
 		background: @white;
@@ -1466,7 +1479,7 @@ p {
 				background-position: center;
 				text-align: center;
 				width: 100%;
-				height: 120px;
+				height: 180px;
 				position: relative;
 			}
 
@@ -1591,25 +1604,23 @@ p {
 	iframe {
 		margin: 0 auto !important;
 	}
-
-	.post-content {
-		margin: 20px 10px;
-	}
 }
 
 .page-template,
 .post-template {
-	&p {
-		font-size: 24px;
-		font-weight: 600;
-	}
-
 	.post-meta {
-		display: flex;
-		justify-content: space-between;
-		margin: 10px 10px 0;
+		margin: 10px 30px 0;
 		color: #9ea1ab;
 		font-size: 14px;
+
+		& > div {
+			margin-right: 20px;
+			display: inline-block;
+		}
+
+		a {
+			color: #9ea1ab;
+		}
 
 		i {
 			margin-right: 5px;
@@ -1651,29 +1662,29 @@ p {
 	}
 
 	.link-preview {
-		border: 1px solid #dadada;
-		padding: 5px;
-		width: 90%;
+		border: 1px solid #d2d2d2;
+		padding: 10px;
 		transition: all 0.2s ease-out;
-		border-radius: 5px;
+		border-radius: 3px;
 		margin: 20px auto;
 		background-color: #ffffff;
-		box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+		display: flex;
+		justify-content: space-between;
 		@media(max-width: 800px) {
 			width: 100%;
 		}
 
 		.preview-image {
 			display: inline-block;
-			height: 200px;
-			width: 100%;
-			float: left;
+			width: 40%;
+			float: none;
 			background-size: cover;
 			background-position-x: center;
 			background-position-y: center;
-			border-radius: 3px 3px 1px 1px;
+			border-radius: 2px;
+			border: 1px solid #ddd;
 			@media(max-width: 600px) {
-				height: 130px;
+				width:60%;
 			}
 		}
 
@@ -1700,15 +1711,18 @@ p {
 
 		.link-info {
 			display: inline-block;
-			width: 100%;
 			overflow: hidden;
-			padding: 10px 10px 0;
+			padding: 10px 20px;
 
 			h4 {
 				margin-top: 0;
 				margin-top: 0;
-				font-size: 1.3em;
+				font-size: 1.5em;
 				font-weight: 500;
+
+				@media(max-width: 800px) {
+					font-size: 1.3em;
+				}
 			}
 
 			p {
@@ -2370,7 +2384,7 @@ p {
 				font-size: 15px;
 				width: fit-content;
 				width: 100%;
-				margin: 0 0 10px;
+				margin: 0 0 20px;
 
 				.name {
 					font-weight: 600;
