--- a/partials/widget-twitter.hbs
+++ b/partials/widget-twitter.hbs
@@ -2,7 +2,7 @@
 <div class="widget">
 	<div class="content twitter">
 		<h4 class="title">@HackersAndSlackers</h4>
-	 <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78859/"></script> <!-- end feedwind code --> {{!--
+	 <!-- start feedwind code -->  <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78859/"></script> <!-- end feedwind code -->  <!-- end feedwind code --> {{!--
 
 
 		<!-- start code from publish.twitter.com -->
