this might break everything

--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -3,6 +3,14 @@
 ====================================================*/
 @import "less_parts/variables.less";
 @import "less_parts/mixin.less";
+
+@import "less_parts/author.less";
+@import "less_parts/global.less";
+@import "less_parts/footer.less";
+@import "less_parts/menu.less";
+@import "less_parts/post.less";
+@import "less_parts/postpreview.less";
+@import "less_parts/variables.less";
 /*====================================================
 	fonts
 ====================================================*/
@@ -10,594 +18,10 @@
 	font-family: 'akzidenz';
 	src: url("https://storage.cloud.google.com/hackersandslackersassets/AkzidenzGrotesk-BQ-Light-Regular.otf") format("opentype");
 }
-/*====================================================
-	common styles
-====================================================*/
-body,
-html {
-	font-family: 'akzidenz', 'proxima-nova',sans-serif;
-	font-size: 14px;
-	color: @text-color;
-	line-height: 1.75em;
-	background: @bg-color;
-	position: relative;
-	font-weight: 200;
-}
 
-body {
-	width: 100%;
-	overflow-x: hidden;
-}
 
-article {
-	font-size: 16px;
 
-	p {
-		line-height: 2em;
-	}
-}
 
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-family: 'mr-eaves-xl-modern', serif;
-	font-weight: 700;
-	color: @text-color-heading;
-}
-
-.h1,
-h1 {
-	font-size: 3em;
-	font-weight: 700;
-	@media(max-width: 600px) {
-		font-size: 2em;
-	}
-}
-
-.h2,
-h2 {
-	font-size: 2.2em;
-	font-family: 'mr-eaves-xl-modern';
-	@media(max-width: 600px) {
-		font-size: 2em;
-	}
-}
-
-.home-template {
-	.main-content {
-		display: flex;
-		justify-content: center;
-		flex-direction: column;
-	}
-}
-
-.h3,
-h3 {
-	font-size: 1.5em;
-	text-transform: uppercase;
-	font-weight: 300;
-}
-
-.h4,
-h4 {
-	font-size: 1.5em;
-}
-
-.h5,
-h5 {
-	font-size: 1.4em;
-	font-weight: 500;
-	margin: 5px 0 0;
-	font-family: 'mr-eaves-xl-modern', serif;
-	color: @text-color-heading;
-	line-height: 1;
-	text-align: left;
-	@media(max-width: 600px) {
-		font-size: 1.3em;
-		margin-top: 5px;
-		text-align: center;
-	}
-}
-
-.h6,
-h6 {
-	font-size: 0.75em;
-}
-
-a {
-	color: @theme-color;
-	outline: none;
-
-	&:hover {
-		color: @hover-color;
-		cursor: pointer;
-	}
-}
-
-a img,
-a:active,
-a:focus {
-	outline: none;
-}
-
-.btn {
-	padding: 7px 14px;
-	border-radius: 0;
-}
-
-.btn-default {
-	border: 1px solid @theme-color;
-	background: @theme-color;
-	color: @white;
-	.transition(all 0.2s ease-in-out);
-
-	&:hover {
-		border: 1px solid @hover-color;
-		background: @hover-color;
-	}
-
-	&:focus {
-		outline: none;
-	}
-}
-
-.btn-default[disabled] {
-	border: 1px solid @text-color-heading;
-	background: @text-color-heading;
-	color: @white;
-}
-
-input[type="search"],
-input[type="text"],
-input[type="url"],
-input[type="email"],
-textarea {
-	padding: 7px;
-	border: 1px solid @border-color;
-	.border-radius(2px);
-	.transition(all 0.2s);
-
-	&:focus {
-		border: 1px solid @theme-color;
-		outline: none;
-	}
-}
-
-blockquote {
-	border-left: 4px solid @theme-color;
-	font-family: 'mr-eaves-xl-modern', serif;
-	font-style: italic;
-}
-
-pre {
-	padding: 0;
-	background: none;
-	border: none;
-	margin: 20px 10px;
-	font-size: 12px;
-	@media(max-width: 600px) {
-		margin: 20px 0;
-	}
-}
-
-::-moz-selection {
-	color: @white;
-	background: @theme-color;
-	text-shadow: none;
-}
-
-::selection {
-	color: @white;
-	background: @theme-color;
-	text-shadow: none;
-}
-
-.author-template {
-	.container .tag-hash-upcoming {
-		display: none;
-	}
-
-	.link-preview {
-		height: 167px;
-		background-size: cover !important;
-		color: white;
-		position: relative;
-		border: 1px solid mix(@theme-color, #e1e1e1, 20%);
-
-		h4 {
-			position: absolute;
-			bottom: 0;
-			left: 15px;
-			color: white;
-			z-index: 10;
-			width: 90%;
-			line-height: 1;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			display: block;
-			white-space: nowrap;
-			font-size: 18px;
-		}
-
-		i {
-			position: absolute;
-			right: 12px;
-			bottom: 12px;
-			z-index: 100;
-			font-size: 14px;
-		}
-
-		&::after {
-			display: block;
-			position: absolute;
-			background-image: linear-gradient(to bottom, transparent 0%, @theme-color 100%);
-			height: 100%;
-			width: 100%;
-			top: 0;
-			content: '';
-		}
-	}
-}
-
-.post-preview {
-	padding: 0 !important;
-	border: 1px solid #dadada;
-
-	.featured-media {
-		box-sizing: border-box;
-		overflow: visible;
-		margin: auto;
-	}
-
-	.post-head {
-		margin: 10px 10px 20px;
-	}
-
-	i {
-		margin-right: 5px;
-		font-size: 12px;
-	}
-
-	p {
-		line-height: 1.5;
-	}
-
-	.meta {
-		display: flex;
-		width: 55%;
-		justify-content: space-between;
-		max-width: 350px;
-
-		.meta-item {
-			display: block;
-			margin: auto 0;
-
-			* {
-				color: #6e7980;
-			}
-
-			a {
-				text-decoration: none;
-
-				&:hover {
-					color: @hover-color;
-
-					& > span {
-						color: @hover-color !important;
-					}
-				}
-			}
-
-			.avi {
-				width: 20px;
-				height: 20px;
-				display: inline-block;
-				margin-right: 10px;
-				border-radius: 50%;
-			}
-		}
-		@media(max-width: 800px) {
-			.date,
-			.tags {
-				display: none;
-			}
-		}
-	}
-
-	.content {
-		padding: 20px;
-	}
-
-	.post-permalink {
-		text-align: left;
-		display: flex;
-		justify-content: space-between;
-		padding: 10px;
-
-		.btn {
-			font-size: 18px;
-			font-weight: 100;
-			text-transform: uppercase;
-			padding: 10px 20px;
-			@media(max-width: 600px) {
-				font-size: 16px;
-				font-weight: 100;
-				padding: 10PX 20px;
-			}
-		}
-	}
-
-	.post-content {
-		line-height: 1.5;
-		margin: 0 10px 10px;
-		@media(max-width: 600px) {
-			font-size: 14px;
-		}
-	}
-
-	.post-title {
-		font-size: 3em;
-		@media(max-width: 600px) {
-			font-size: 2em !important;
-		}
-	}
-
-	&.tag-hash-upcoming,
-	&.upcoming {
-		display: none;
-	}
-
-	&.tag-roundup {
-		.featured-media {
-			display: none;
-		}
-
-		.post-content {
-			display: none;
-		}
-	}
-
-	&.tag-hash-image {
-		.featured-media {
-			display: block !important;
-		}
-	}
-}
-/*====================================================
-	post footer
-====================================================*/
-.post-footer {
-	padding: 10px 0;
-
-	.tag-cloud {
-		float: left;
-
-		a {
-			border: 1px solid #e6e6e6;
-			padding: 3px 11px;
-			color: #627e90;
-			line-height: 1.5em;
-			display: inline-block;
-			border-radius: 2px;
-			.transition(all 0.2s ease);
-			margin-right: 10px;
-
-			&:hover {
-				color: @white;
-				background: @theme-color;
-				border: 1px solid @theme-color;
-				text-decoration: none;
-			}
-		}
-	}
-
-	.share-icons {
-		@media(max-width: 800px){
-			padding: 0;
-			display: flex;
-			justify-content: space-between;
-			width: 50%;
-			margin: auto;
-		}
-	}
-
-	.share {
-		float: right;
-	}
-	@media(max-width: 600px) {
-		border-top: 1px solid #f0f1f4;
-
-		.share,
-		.tag-cloud {
-			float: none;
-			margin: 20px auto;
-
-			* {
-				margin: 0 auto !important;
-			}
-		}
-
-		.tag-cloud {
-			display: flex;
-			justify-content: center;
-			width: 90%;
-
-			a {
-				margin: 0 10px !important;
-			}
-		}
-
-		.share {
-			width: 100%;
-		}
-	}
-}
-/*====================================================
-	header
-====================================================*/
-.main-header {
-	text-align: center;
-	padding: 150px 0;
-	background: url("https://hackers.nyc3.digitaloceanspaces.com/head.jpg") center center;
-	background-size: cover;
-	position: relative;
-	@media(max-width: 800px) {
-		padding: 50px 0;
-	}
-
-	.mobile-branding {
-		display: none;
-	}
-
-	.branding {
-		font-size: 3.5em;
-		font-family: 'mr-eaves-xl-modern', serif;
-		color: @text-color-heading;
-		z-index: 5;
-		position: relative;
-
-		&:hover {
-			text-decoration: none;
-		}
-
-		img {
-			width: 400px;
-			max-width: 80%;
-			@media(max-width: 800px) {
-				width: 250px;
-			}
-		}
-	}
-}
-
-.navbar-header {
-	text-align: center;
-	font-size: 20px;
-	padding: 14px;
-
-	li {
-		height: 56px;
-		line-height: 56px;
-		font-size: 2em;
-		cursor: pointer;
-	}
-
-	.nav-toggle-button:hover {
-		cursor: pointer;
-	}
-}
-
-.main-navigation {
-	text-align: center;
-	/* margin-top: 35px; */
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgb(8, 115, 195) 100%);
-	height: 150px;
-	@media(max-width: 800px) {
-		height: auto;
-		background: none;
-	}
-
-	.menu {
-		padding: 0;
-		margin: 30px 40px 0 auto;
-		display: flex;
-		justify-content: space-between;
-		max-width: 309px;
-		@media(max-width: 800px) {
-			margin: 30px auto 0;
-			max-width: 235px;
-			opacity: 0.9;
-		}
-
-		li {
-			list-style: none;
-			display: inline-block;
-			// margin: 0 14px;
-			position: relative;
-
-			a {
-				color: white;
-				// text-transform: capitalize;
-				line-height: 1;
-				display: block;
-				padding: 0;
-				font-family: 'mr-eaves-xl-modern', serif;
-				text-transform: uppercase;
-				font-size: 20px;
-				font-weight: 600;
-				transition: all 0.2s ease-out;
-				@media(max-width: 600px) {
-					padding: 0;
-					font-weight: 500;
-				}
-			}
-
-			&:hover > a {
-				text-shadow: 0 0 20px #b41eda;
-				text-decoration: none;
-				cursor: pointer;
-				color: white;
-			}
-
-			&.nav-current {
-				@media(max-width: 600px) {
-					padding: 0;
-				}
-
-				a {
-					color: #40cebb;
-					font-size: 17px;
-				}
-			}
-
-			ul {
-				visibility: hidden;
-				background: @white;
-				text-align: left;
-				margin-bottom: 20px;
-				position: absolute;
-				left: 0;
-				top: 120%;
-				width: 200px;
-				z-index: 999;
-				.opacity(0);
-				.transition(all 0.2s ease);
-
-				li {
-					a {
-						line-height: 2.5em;
-						color: @text-color;
-					}
-				}
-
-				&:hover > a {
-					cursor: pointer;
-				}
-			}
-
-			&:hover {
-				ul {
-					visibility: visible;
-					.opacity(1);
-					top: 100%;
-				}
-			}
-		}
-	}
-}
 /*====================================================
 	main post area
 ====================================================*/
@@ -614,210 +38,7 @@ pre {
 	}
 }
 
-.post {
-	padding: 0;
-	background: @white;
-	margin-bottom: 20px;
-	position: relative;
-	overflow: hidden;
-	order: 1;
 
-	&.featured {
-		order: 0;
-	}
-
-	&.page {
-		.page-head {
-			padding: 0 30px;
-			@media(max-width: 800px) {
-				margin: 0;
-
-				h1 {
-					font-size: 3em;
-					font-weight: 700;
-				}
-			}
-		}
-	}
-
-	.featured {
-		position: absolute;
-		background: lighten(@theme-color, 50%);
-		color: @white;
-		text-align: center;
-		top: -12px;
-		right: -32px;
-		width: 80px;
-		height: 40px;
-		line-height: 54px;
-		.transform(rotate(45deg));
-		font-size: 12px;
-		z-index: 10;
-
-		i {
-			.transform(rotate(-45deg));
-		}
-	}
-
-	.roundup {
-		position: absolute;
-		background: #81a1ab;
-		color: white;
-		text-align: center;
-		top: -12px;
-		right: -32px;
-		width: 80px;
-		height: 40px;
-		line-height: 54px;
-		transform: rotate(45deg);
-		z-index: 20;
-		display: none;
-
-		i {
-			.transform(rotate(-45deg));
-		}
-	}
-
-	.post-head {
-		line-height: 1;
-		text-align: left;
-
-		.post-title {
-			text-align: left;
-			width: 100%;
-			margin: 0;
-			line-height: 1;
-			overflow: hidden;
-			/*text-overflow: ellipsis;*/
-			display: block;
-			/*white-space: nowrap;*/
-			@media(max-width: 600px) {
-				white-space: normal;
-				text-align: center;
-			}
-
-			a {
-				color: @text-color-heading;
-
-				&:focus,
-				&:hover {
-					text-decoration: none;
-				}
-			}
-		}
-
-		.post-excerpt {
-			margin: 5px auto 0;
-			line-height: 1;
-			font-weight: 600;
-			text-align: left;
-			@media(max-width: 600px) {
-				font-weight: 500;
-				font-size: 1.2em;
-				text-align: center;
-			}
-		}
-
-		.post-meta {
-			// font-family: 'mr-eaves-xl-modern', serif;
-			color: @text-color-light;
-			margin: 15px 0 0;
-			font-size: 12px;
-			text-align: left;
-
-			div {
-				display: inline-block;
-			}
-
-			i {
-				margin-right: 10px;
-				@media(max-width: 600px) {
-					display: none;
-				}
-			}
-		}
-
-		img {
-			height: 14px;
-			width: 14px;
-		}
-
-		span {
-			margin: 0;
-			white-space: nowrap;
-		}
-
-		.comment-count {
-			display: none;
-		}
-	}
-	@media(max-width: 600px) {
-		padding: 20px 10px;
-	}
-}
-
-.featured-media {
-	img {
-		width: 100%;
-	}
-
-	a {
-		transition: opacity 0.2s ease-out;
-
-		&:hover {
-			opacity: 0.8;
-			cursor: pointer;
-		}
-	}
-}
-
-.post-content {
-	margin: 0 30px;
-	overflow-x: hidden;
-	clear: both;
-
-	ol,
-	ul {
-		margin-left: 15px;
-		padding-left: 15px;
-		margin-bottom: 20px;
-
-		li {
-			padding:20px;
-		}
-	}
-
-	.fluid-width-video-wrapper {
-		margin: 0;
-	}
-
-	iframe {
-		margin: 0;
-		display: block;
-		@media(max-width: 600px) {
-			height: 100%;
-		}
-	}
-
-	.twitter-tweet {
-		margin: 20px auto;
-	}
-
-	img {
-		max-width: 95%;
-		border: 1px solid #eaeaea;
-		margin: auto;
-		display: block;
-	}
-
-	a {
-		color: @secondary-color;
-
-		&:hover {
-			color: @hover-color;
-		}
-	}
-}
 
 .share {
 	.share-icons {
@@ -1025,11 +246,6 @@ pre {
 	}
 }
 
-.comment-wrap {
-	background: @white;
-	padding: 35px;
-	margin-bottom: 35px;
-}
 
 .prev-next-wrap {
 	text-align: center;
@@ -1180,7 +396,7 @@ pre {
 				}
 			}
 		}
-	}
+
 
 	.tag-cloud {
 		a {
@@ -1201,6 +417,7 @@ pre {
 			}
 		}
 	}
+}
 
 	.recent-post {
 		.recent-single-post,
@@ -1267,6 +484,7 @@ pre {
 		}
 	}
 }
+
 /*====================================================
 	Tag page & author page cover
 ====================================================*/
@@ -1310,75 +528,7 @@ pre {
 		margin-top: 7px;
 	}
 }
-/*====================================================
-	footer
-====================================================*/
-.main-footer {
-	background: linear-gradient(to bottom, rgba(0,255,196,0.2), rgba(41,58,63,0));
-	padding: 35px 0;
-	color: white;
-	margin-top: 30px;
-	background-color: #3c465a;
-	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
-	@media(max-width: 600px) {
-		margin-top: 10px;
-	}
 
-	.widget {
-		.title {
-			color: @white;
-		}
-
-		& > div > div:last-child {
-			border-bottom: 0 !important;
-		}
-
-		.tag-cloud {
-			a {
-				border: 0;
-				border-radius: 2px;
-				color: #FFFFFF;
-				background: #3d888c;
-				padding: 7px 15px;
-
-				&:hover {
-					border: 1px solid @white;
-					background: @white;
-					color: @theme-color;
-				}
-			}
-		}
-
-		.recent-post {
-			.single-author {
-				font-size: 18px;
-				font-weight: 200;
-				font-family: 'mr-eaves-xl-modern', serif;
-				transition: all 0.2s ease;
-			}
-
-			.recent-single-post,
-			.single-author {
-				border-bottom: 0;
-
-				.post-title,
-				.single-author-name {
-					color: @white;
-					font-size: 18px;
-
-					&:hover {
-						color: @theme-color;
-					}
-				}
-
-				.date {
-					color: @white;
-					opacity: 0.5;
-				}
-			}
-		}
-	}
-}
 
 .copyright {
 	background: @bg-color-footer-dark;
